Changelog
=========

1.0.1 (unreleased)
------------------

- Find banner images recursively.
  [mathias.leimgruber]


1.0 (2013-04-17)
----------------

- inital release
